#0000 - email fix (#86)