@@ -35,7 +35,7 @@ public class EmailTemplateResolverService {
     private String resolveTemplate(String templateName) throws IOException {
         String fullPath = templatesPath + "/" + templateName;
         Resource resource =ctx.getResource(fullPath);
-        return new String(Files.readAllBytes(resource.getFile().toPath()));
+        return new String(resource.getInputStream().readAllBytes());
     }
 
     private String fillTemplate(String template, Map<String, String> values) {
